# aquarium

./: Cargo.toml  README.md  ideas  todo
scanner/: Cargo.toml  README.md  scanner.py
scanner/src/: lib.rs  main.rs
sea/: Cargo.toml  README.md
sea/src/: main.rs
sea/src/shader/: debug_draw_flux.fs.glsl  fish.fs.glsl  fish.geo.glsl  fish.gs.glsl  fish.vs.glsl  flux.cp.glsl  general_2d.vs.glsl  particle.cp.glsl  sky.fs.glsl
src/: main.rs
src/shader/: fish.fs.glsl  fish.geo.glsl  fish.vs.glsl  gen_flux.cp.glsl
