[package]
name = "aquarium"
version = "0.1.0"
authors = ["Felix Paul Niemeyer <niemeyer.felix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.18.0"
vulkano-shaders = "0.18.0"
vulkano-win = "0.18.0"

image = "^0.23.4"

rand = "^0.7.3"
winit = "0.22.2"
